# power-scheduler

./: .gitignore  README.md  com.ssdevop.PowerScheduler.desktop  com.ssdevop.PowerScheduler.metainfo.xml  com.ssdevop.PowerScheduler.service  power-scheduler.desktop  pyproject.toml  run.sh
assets/styles/: app.css
scripts/: format.sh  run-dev.sh
src/: main.py
src/app/: application.py  config.py
src/domain/: enums.py  models.py  validators.py
src/repositories/: scheduled_job_repository.py
src/services/: capability_service.py  command_builder.py  notification_service.py  palette_service.py  protocols.py  reminder_service.py  schedule_controller.py  scheduler_service.py  session_service.py  shutdown_service.py  systemd_service.py  theme_service.py
src/tests/: test_capability_service.py  test_host_system_probe.py  test_main_window.py  test_notification_service.py  test_palette_service.py  test_repository.py  test_scheduled_job_record.py  test_scheduled_job_repository.py  test_scheduler_service.py  test_scheduler_service_cancel.py  test_scheduler_service_misc.py  test_scheduler_service_schedule.py  test_session_service.py  test_shutdown_service.py  test_systemd_service.py  test_systemd_service_build.py  test_systemd_service_cancel.py  test_systemd_service_schedule.py  test_time_utils.py
src/ui/: main_test_window.py  main_window.py  schedule_form.py  status_panel.py
src/utils/: formatters.py  linux_utils.py  process_utils.py  time_utils.py
