[project]
name = "power-scheduler"
version = "0.1.0"
description = "Schedule power actions on Linux without keeping the app open."
requires-python = ">=3.10"
dependencies = [
    "PyGObject",
]

[project.urls]
Homepage = "https://github.com/ssdevopl/power-scheduler"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
